# rust-full-stack

chapter2/: Cargo.toml
chapter2/http/src/: httprequest.rs  httpresponse.rs
chapter2/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
chapter2/tcpclient/src/: main.rs
chapter2/tcpserver/src/: main.rs
chapter3/ezytutors/: Cargo.toml
chapter3/ezytutors/tutor-nodb/src/: routes.rs
chapter4/ezytutors/: Cargo.toml
chapter4/ezytutors/tutor-db/: .env
chapter4/ezytutors/tutor-db/src/: database.sql
chapter4/ezytutors/tutor-nodb/: Cargo.toml
chapter4/ezytutors/tutor-nodb/src/: handlers.rs
chapter5/ezytutors/: Cargo.toml
chapter5/ezytutors/tutor-db/: Cargo.toml
chapter5/ezytutors/tutor-db/.sqlx/: query-3d99e44c9f213d35848d90a177ad0aec65de37a897510da4d353a3f6c0972f6c.json  query-6d8c255e7f4465100083a07ed58ca07ea8f0d6589d0b2cb7ce4576f84d010f10.json
chapter5/ezytutors/tutor-db/src/iter4/: db_access.rs  errors.rs  handlers.rs  state.rs
chapter6/ezytutors/: Cargo.toml
chapter6/ezytutors/tutor-db/.sqlx/: query-16bbae88b3da2e5a9b2adfa2a1d6c0bbef18a8a6365f9a4bae0b856648543211.json  query-5961d2b3d118caac7eb43cc36dab456d153fc8b89a6891e3678b643f4561fdab.json  query-5dbd56259617ac755e60b1726c91009f52826c6dc0f294674bd37f3966e8a4e0.json  query-6423902d04c4b0d91d9222f91680211c55e27b52bc0a9a26d3cd0ba1b89c3381.json  query-6e98b77e34f7cbf51e91e2d2ae83c65c6066f56e072fca01e34d6eb2bfb04a97.json  (+5 more)
chapter7/ezytutors/: Cargo.toml
chapter7/ezytutors/tutor-web-app-ssr/: Cargo.toml
chapter7/ezytutors/tutor-web-service/: .env  Cargo.toml
(+25 files in other folders)
