[package]
name = "tutor-db"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.1.0"
actix-rt = "2.7.0"
dotenv = "0.15.0"

# 启动命令：    psql -U postgres
sqlx = { version = "0.8.1", default-features = false, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
] }

serde = { version = "1.0.144", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }